--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,62 @@ body {
 div.logo{
     height:10%;
 }
+
+div.modal-date{
+    margin-bottom: 15px
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  display: inline-block;
+}
+
+input[type="checkbox"][id^="myCheckbox"] {
+  display: none;
+}
+
+
+
+label[for^="myCheckbox"]:before {
+  background-color: white;
+  color: red;
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  border: 1px solid grey;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 28px;
+  transition-duration: 0.4s;
+  transform: scale(0);
+}
+
+label[for^="myCheckbox"] img {
+  height: 100px;
+  width: 100px;
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+}
+
+:checked + label[for^="myCheckbox"] {
+  border-color: blue;
+}
+
+:checked + label[for^="myCheckbox"]:before {
+  content: "\2713";
+  background-color: grey;
+  transform: scale(1);
+}
+
+:checked + label[for^="myCheckbox"] img {
+  transform: scale(0.9);
+  box-shadow: 0 0 5px #333;
+  z-index: -1;
+}
